# rest_server/src/controllers/item_controller.js
@@ -22,8 +22,9 @@ const list = asyncHandler(async (req, res, next) => {
 
 const create = asyncHandler(async (req, res, next) => {
   try {
-    await MarketplaceItem.create(req.body);
-    res.status(201).send("created");
+    const id = await MarketplaceItem.create(req.body);
+    console.log(id);
+    res.status(201).json({ id: id });
   } catch (e) {
     databaseErrorHandler(e, res);
   }
@@ -105,6 +106,19 @@ const updateStatus = asyncHandler(async (req, res, next) => {
   }
 });
 
+const updateSubmits = asyncHandler(async (req, res, next) => {
+  try {
+    const result = await MarketplaceItem.updateSubmits(req.params.itemId);
+    if (isNil(result)) {
+      res.status(404).send("item not found");
+    } else {
+      res.status(200).send("ok");
+    }
+  } catch (e) {
+    databaseErrorHandler(e, res);
+  }
+});
+
 const listStarUsers = asyncHandler(async (req, res, next) => {
   try {
     const users = await MarketplaceItem.listStarUsers(req.params.itemId);
@@ -127,5 +141,6 @@ module.exports = {
   del,
   updateDescription,
   updateStatus,
-  listStarUsers
+  listStarUsers,
+  updateSubmits
 };
